<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.stiantornholmgrimsgaard.mappe2_s305537.Party.AddStudentActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.04"
        android:background="@drawable/main_background_selector"
        android:padding="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="51dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLayoutBackground">

            <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="325dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="40dp"
                android:layout_weight="0.04"
                android:background="@drawable/border"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="30dp"
                android:textSize="25sp"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="325dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="40dp"
                android:layout_weight="0.05"
                android:background="@drawable/border"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="30dp"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text" />

            <EditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="325dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="30dp"
                android:textSize="25sp"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_edit_text" />

            <Button
                android:id="@+id/add_student_button"
                android:layout_width="325dp"
                android:layout_height="90dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorBlue"
                android:onClick="addStudent"
                android:text="@string/add_student"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_edit_text"
                app:layout_constraintVertical_bias="0.573" />
        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

    <include
        layout="@layout/bottom_navigation_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

</LinearLayout>